# den

./: CLAUDE.md  Cargo.toml  README.md
.beads/: config.json  issues.jsonl
benches/: index_benchmarks.rs
docs/: export-tdd-plan.md  fts5-tdd-plan.md  notes-cli-design.md  notes-cli-implementation.md  plan-performance-optimization.md
src/: lib.rs  main.rs
src/cli/: config.rs  date_filter.rs  handlers.rs  mod.rs  output.rs
src/cli/handlers/: archive.rs  check.rs  export.rs  index.rs  links.rs  list.rs  metadata.rs  mod.rs  mv.rs  new.rs  resolve.rs  search.rs  show_edit.rs  tests.rs  vaults.rs
src/domain/: link.rs  mod.rs  note.rs  note_id.rs  tag.rs  topic.rs  validate.rs  validation.rs
src/export/: html.rs  links.rs  mod.rs  site.rs  template.rs  theme.rs
src/index/: builder.rs  mod.rs  repository.rs  schema.rs  sqlite.rs
src/index/sqlite/: builder_methods.rs  connection.rs  mod.rs  repo_impl.rs  tests.rs  transaction.rs
src/infra/: content_hash.rs  frontmatter.rs  fs.rs  mod.rs  slug.rs
tests/: cli_tests.rs  fixture_tests.rs  harness_integration_tests.rs
tests/common/: mod.rs
tests/common/harness/: command.rs  env.rs  mod.rs  note.rs
tests/fixtures/invalid/: empty_rel.md  empty_tag.md  empty_title.md  empty_topic.md  invalid_rel_underscore.md  invalid_tag_chars.md  invalid_topic_chars.md  invalid_ulid.md  invalid_yaml_syntax.md  missing_closing_delimiter.md  missing_created.md  missing_id.md  missing_modified.md  missing_opening_delimiter.md  missing_title.md  whitespace_before_delimiter.md
tests/fixtures/valid/: body_with_dashes.md  full.md  (+5 more)
