[package]
name = "den"
version = "0.1.0"
edition = "2024"

[lib]
name = "den"
path = "src/lib.rs"

[[bin]]
name = "den"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }
walkdir = "2"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
tempfile = "3"
dirs = "5"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
